--- a/luna.html
+++ b/luna.html
@@ -5,181 +5,398 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LUNA Coffee House</title>
 
-<!-- Elegant serif font -->
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-<!-- Bootstrap CSS -->
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<!-- Bootstrap JS bundle -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <style>
-/* ===== BODY & BACKGROUND ===== */
-body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    color: #4e342e;
-    background: url("https://images.unsplash.com/photo-1509042239860-f550ce710b93") center/cover fixed no-repeat;
-    overflow-x: hidden;
-    transition: all 0.5s ease;
+:root {
+    --bg-base:#f3e9dd;
+    --bg-accent:#ead9c8;
+    --nude:#e2c7b2;
+    --sand:#d2b49c;
+    --ink:#3a2c24;
+    --muted:#8a6f5b;
+    --card:#fbf5ee;
+    --frame:#d9c2ab;
+    --shadow:rgba(58,44,36,.18)
 }
-.overlay { min-height: 100vh; background: rgba(245, 238, 230, 0.75); backdrop-filter: blur(8px); transition: all 0.5s ease; }
-body.dark {
-    color: #e8dfd6;
-    background: url("https://images.unsplash.com/photo-1509042239860-f550ce710b93") center/cover fixed no-repeat;
+*{box-sizing:border-box;margin:0;padding:0}
+
+body{
+    font-family:'Josefin Sans',sans-serif;
+    color:var(--ink);
+    background:
+      radial-gradient(1200px 600px at 10% -10%,#f7efe6 0%,transparent 60%),
+      radial-gradient(900px 500px at 90% 10%,#f0e1d4 0%,transparent 55%),
+      linear-gradient(180deg,var(--bg-base),var(--bg-accent));
+    overflow-x:hidden
 }
-body.dark .overlay { background: rgba(18, 14, 12, 0.75); }
-body.dark nav a { color: rgba(232,223,214,0.8); }
-body.dark nav a:hover { color: #e8dfd6; }
-body.dark nav a::after { background-color: #e8dfd6; }
-body.dark p { color: rgba(232,223,214,0.9); }
-body.dark .contact-subtitle { color: #cbbfb4; }
-body.dark .contact-heading p { color: #cbbfb4; }
-body.dark .contact-item .label { color: #cbbfb4; }
-body.dark .contact-item a { color: #e8dfd6; }
-body.dark footer { color: #cbbfb4; }
-header { padding: 28px 0; position: relative; }
-nav { display: flex; justify-content: center; align-items: center; gap: 80px; flex-wrap: wrap; }
-nav a { text-decoration: none; color: rgba(41, 15, 6, 0.65); font-size: 18px; font-weight: 500; position: relative; transition: color 0.3s ease, transform 0.3s ease; }
-nav a::after { content: ""; position: absolute; left: 50%; bottom: -6px; transform: translateX(-50%); width: 0; height: 2px; background-color: #4e342e; border-radius: 2px; transition: width 0.35s ease; }
-nav a:hover { color: #4e342e; transform: translateY(-3px); }
-nav a:hover::after { width: 60%; }
-.logo { display: flex; align-items: center; gap: 12px; font-family: 'Playfair Display', serif; color: #4e342e; }
-.logo-text { font-size: 22px; letter-spacing: 4px; }
 
-/* ===== SECTIONS ===== */
-section { max-width: 850px; margin: auto; padding: 100px 20px; text-align: center; }
-h1 { font-family: 'Playfair Display', serif; font-size: 52px; margin-bottom: 15px; }
-h2 { font-family: 'Playfair Display', serif; font-size: 36px; margin-bottom: 25px; }
-p { font-size: 17px; line-height: 1.9; color: #4b362e; }
+.art-bg{
+    position:fixed;inset:0;pointer-events:none;opacity:.45;
+    background-image:
+      repeating-linear-gradient(90deg,rgba(210,180,156,.2) 0 1px,transparent 1px 32px),
+      repeating-linear-gradient(0deg,rgba(226,199,178,.18) 0 1px,transparent 1px 32px)
+}
 
-/* ===== STORY SECTION ===== */
-.story-content { display: flex; gap: 72px; align-items: flex-start; }
-.story-text { flex: 1 1 55%; text-align: left; }
-.story-images { flex: 1 1 45%; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 16px; justify-items: right; align-items: start; }
-.story-images img { width: 100%; max-width: 200px; height: 300px; object-fit: cover; border-radius: 20px; transition: transform 0.4s ease, box-shadow 0.4s ease; margin: 20px; }
-.story-images img:hover { transform: scale(1.08); z-index: 2; box-shadow: 0 25px 50px rgba(78,52,46,0.35); }
-@media (max-width: 800px) {
-    .story-content { flex-direction: column; }
-    .story-text { text-align: center; }
-    .story-images { justify-items: center; }
+.container-max{max-width:1100px;margin:auto;padding:0 24px}
+
+/* ===== HEADER ===== */
+header {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    backdrop-filter: blur(16px);
+    background: rgba(243, 233, 221, 0.85);
+    border-bottom: 1px solid rgba(210, 180, 156, 0.35);
+    transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1);
+    box-shadow: 0 0 0 rgba(58,44,36,0);
+}
+header.shrink {
+    background: rgba(243, 233, 221, 0.98);
+    box-shadow: 0 18px 42px rgba(58,44,36,0.18);
+    transform: translateY(0);
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+    transition: padding 0.6s ease;
+}
+header.shrink nav {
+    padding: 12px 0;
+}
+
+/* ===== LOGO ===== */
+.logo {
+    font-family: 'Cinzel', serif;
+    font-size: 26px;
+    letter-spacing: 8px;
+    color: #3a2a20;
+    transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+    cursor: pointer;
+}
+header.shrink .logo {
+    font-size: 20px;
+    letter-spacing: 4px;
+}
+/* ===== MICRO ANIMATION LOGO ===== */
+.logo:hover {
+    transform: translateY(-4px) scale(1.05);
+    text-shadow: 0 0 8px rgba(226,199,178,0.7);
+}
+
+/* ===== NAV LINKS ===== */
+.nav-links {
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+nav a {
+    color: var(--ink);
+    text-decoration: none;
+    font-size: 13px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    position: relative;
+    padding-bottom: 6px;
+    transition: all 0.4s ease;
+}
+nav a::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background: var(--muted);
+    transform: translateX(-50%);
+    transition: width 0.45s ease;
+}
+nav a:hover {
+    color: #2f241d;
+    text-shadow: 0 0 6px rgba(226,199,178,0.5);
+}
+nav a:hover::after {
+    width: 60%;
+}
+
+/* ===== HERO ===== */
+.hero{
+    display:grid;grid-template-columns:1.1fr .9fr;
+    gap:40px;padding:110px 0 80px;align-items:center
+}
+.hero h1{
+    font-family:'Cinzel',serif;
+    font-size:56px;letter-spacing:4px;margin-bottom:18px
+}
+.hero p{font-size:18px;line-height:1.9;color:#4c3b30}
+.tagline{
+    text-transform:uppercase;letter-spacing:4px;
+    font-size:12px;color:var(--muted);margin-bottom:12px
+}
+.hero-actions{display:flex;gap:16px;margin-top:26px}
+.btn-deco{
+    padding:12px 20px;border:1px solid var(--sand);
+    background:rgba(251,245,238,.9);
+    color:var(--ink);text-decoration:none;
+    font-size:12px;letter-spacing:2px;text-transform:uppercase;
+    box-shadow:0 10px 24px var(--shadow);
+    transition:all .3s ease
+}
+.btn-deco:hover{
+    transform:translateY(-3px);
+    background:var(--nude);
+    box-shadow:0 18px 40px rgba(58,44,36,.25)
+}
+.hero-frame{
+    border:1px solid rgba(210,180,156,.6);
+    border-radius:18px;padding:12px;
+    box-shadow:0 20px 45px var(--shadow)
+}
+.hero-frame video{
+    width:100%;height:560px;object-fit:cover;
+    border-radius:12px;filter:sepia(10%)
+}
+
+/* ===== STORY ===== */
+.section{padding:90px 0}
+.section-title{font-family:'Cinzel',serif;font-size:40px;letter-spacing:2px;margin-bottom:16px}
+.section-subtitle{text-transform:uppercase;letter-spacing:4px;font-size:12px;color:var(--muted);margin-bottom:6px}
+
+.story-grid{
+    display:grid;grid-template-columns:1.1fr .9fr;
+    gap:32px;margin-top:30px
+}
+.story-text{
+    background:var(--card);border:1px solid var(--frame);
+    padding:28px;box-shadow:0 20px 45px var(--shadow)
+}
+.story-text p{line-height:1.9}
+.story-images{
+    display:grid;grid-template-columns:repeat(2,1fr);gap:16px
+}
+.story-images img{
+    width:100%;height:260px;object-fit:cover;
+    border-radius:18px;border:1px solid rgba(210,180,156,.6);
+    box-shadow:0 16px 32px var(--shadow);
+    transition:all .35s ease
+}
+.story-images img:hover{
+    transform:translateY(-6px);
+    box-shadow:0 24px 50px rgba(58,44,36,.3)
+}
+
+/* ===== VISIT / LOCATION ===== */
+.visit-grid{
+    display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+    gap:28px;margin-top:32px
+}
+.visit-card{
+    background:var(--card);
+    border:1px solid var(--frame);
+    padding:30px;text-align:center;
+    box-shadow:0 18px 40px var(--shadow);
+    transition:all .3s ease
+}
+.visit-card:hover{
+    transform:translateY(-5px);
+    box-shadow:0 26px 55px rgba(58,44,36,.28)
+}
+.visit-card span{
+    display:block;text-transform:uppercase;
+    letter-spacing:4px;font-size:11px;
+    color:var(--muted);margin-bottom:12px
+}
+.visit-card p{font-size:18px;line-height:1.7;margin-bottom:18px}
+.map-btn{
+    display:inline-block;
+    padding:11px 22px;
+    border:1px solid rgba(210,180,156,.9);
+    background:rgba(251,245,238,.85);
+    color:var(--ink);
+    text-decoration:none;
+    font-size:11px;
+    letter-spacing:2.5px;
+    text-transform:uppercase;
+    position:relative;
+    overflow:hidden;
+    box-shadow:0 8px 20px rgba(58,44,36,.12);
+    transition:transform .35s cubic-bezier(.2,.8,.2,1),
+               box-shadow .35s cubic-bezier(.2,.8,.2,1),
+               background .35s ease;
+}
+.map-btn::after{
+    content:"";
+    position:absolute;
+    left:50%;
+    bottom:0;
+    width:0;
+    height:1px;
+    background:var(--muted);
+    transform:translateX(-50%);
+    transition:width .45s ease;
+}
+.map-btn:hover{
+    background:rgba(226,199,178,.35);
+    transform:translateY(-1px);
+    box-shadow:0 14px 32px rgba(58,44,36,.2);
+}
+.map-btn:hover::after{
+    width:60%;
 }
 
 /* ===== CONTACT ===== */
-.contact-section { padding: 120px 20px; background: none; }
-.contact-container { max-width: 900px; margin: auto; }
-.contact-heading { text-align: center; margin-bottom: 70px; }
-.contact-subtitle { font-size: 13px; letter-spacing: 4px; text-transform: uppercase; color: #6d4c41; }
-.contact-heading h2 { font-family: 'Playfair Display', serif; font-size: 42px; margin: 18px 0; }
-.contact-heading p { font-size: 16px; color: #5a3d32; }
-.contact-details { display: flex; justify-content: center; gap: 80px; flex-wrap: wrap; }
-.contact-item { text-align: center; transition: transform 0.4s ease; }
-.contact-item:hover { transform: translateY(-6px); }
-.contact-item .label { display: block; font-size: 12px; letter-spacing: 3px; text-transform: uppercase; color: #6d4c41; margin-bottom: 14px; }
-.contact-item a { font-size: 20px; font-weight: 400; color: #4e342e; text-decoration: none; position: relative; padding-bottom: 6px; transition: color 0.35s ease; }
-.contact-item a::after { content: ""; position: absolute; left: 50%; bottom: 0; width: 0; height: 1px; background: #4e342e; transform: translateX(-50%); transition: width 0.4s ease; }
-.contact-item a:hover { color: #2b1710; }
-.contact-item a:hover::after { width: 70%; }
+.contact-grid{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+    gap:24px;margin-top:30px
+}
+.contact-card{
+    background:var(--card);border:1px solid var(--frame);
+    padding:24px;text-align:center;
+    box-shadow:0 16px 34px var(--shadow);
+    transition:all .3s ease
+}
+.contact-card:hover{
+    transform:translateY(-5px);
+    box-shadow:0 24px 50px rgba(58,44,36,.28)
+}
+.contact-card span{
+    display:block;font-size:11px;letter-spacing:4px;
+    text-transform:uppercase;color:var(--muted);margin-bottom:10px
+}
+.contact-card a{
+    font-size:18px;color:var(--ink);text-decoration:none
+}
 
 /* ===== FOOTER ===== */
-footer { text-align: center; padding: 30px 15px; font-size: 14px; color: #6d4c41; }
-
-/* DARK MODE TOGGLE */
-.dark-toggle {
-    position: fixed;
-    right: 16px;
-    top: 16px;
-    z-index: 10;
-    border: none;
-    padding: 10px 14px;
-    border-radius: 999px;
-    font-size: 12px;
-    letter-spacing: 0.6px;
-    cursor: pointer;
-    background: rgba(255,255,255,0.85);
-    color: #4e342e;
-    box-shadow: 0 6px 16px rgba(78,52,46,0.25);
-    transition: transform 0.2s ease, background 0.3s ease;
+footer{
+    text-align:center;padding:40px 10px 50px;
+    border-top:1px solid rgba(210,180,156,.4);
+    color:rgba(90,70,58,.8)
 }
-.dark-toggle:hover { transform: translateY(-2px); }
 
+/* ===== REVEAL ===== */
+.reveal{opacity:0;transform:translateY(16px);animation:reveal 1.2s ease forwards}
+.reveal.delay-1{animation-delay:.2s}
+.reveal.delay-2{animation-delay:.4s}
+@keyframes reveal{to{opacity:1;transform:translateY(0)}}
+
+/* ===== RESPONSIVE ===== */
+@media(max-width:900px){
+    .hero,.story-grid{grid-template-columns:1fr}
+    .hero-frame video{height:420px}
+}
 </style>
 </head>
 
 <body>
-<div class="overlay">
-<button class="dark-toggle" id="darkToggle" type="button">Dark Mode</button>
+<div class="art-bg"></div>
 
 <header>
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#OurStory">Our Story</a>
-        <div class="logo">LUNA</div>
-        <a href="/menu">Menu</a>
-
-        <a href="#contact">Contact</a>
-    </nav>
+<div class="container-max">
+<nav>
+<div class="logo">LUNA</div>
+<div class="nav-links">
+<a href="#home">Home</a>
+<a href="#story">Our Story</a>
+<a href="/menu">Menu</a>
+<a href="#contact">Contact</a>
+</div>
+</nav>
+</div>
 </header>
 
-<hr class="header-line">
-
-<section id="home">
-    <h1>LUNA Coffee House</h1>
-    <p style="font-family:monospace;">“Inspired by the glow of Amman Citadel, a moonlit escape experience.”</p>
-    <p style="font-size: smaller; font-family: sans-serif;">Since 2013, Rumi has been a Mediterranean-inspired café where Amman gathers for good coffee, tea, and connection.</p>
+<section id="home" class="hero container-max">
+<div>
+<div class="tagline reveal">Art Deco Coffee Lounge</div>
+<h1 class="reveal delay-1">LUNA Coffee House</h1>
+<p class="reveal delay-2">
+Inspired by the glow of the Amman Citadel, LUNA is a moonlit escape
+for espresso, tea, and slow conversations.
+</p>
+<div class="hero-actions reveal delay-2">
+<a class="btn-deco" href="/menu">View Menu</a>
+<a class="btn-deco" href="#contact">Visit Us</a>
+</div>
+</div>
+<div class="hero-frame reveal delay-1">
+    <video id="hero-video" src="{{video}}" autoplay muted loop playsinline></video>
+</div>
 </section>
 
-<section id="OurStory">
-    <h2>Our Story</h2>
-    <div class="story-content">
-        <div class="story-text">
-            <p>{{LUNATEXT}}</p>
-        </div>
-        <div class="story-images">
-            <img src="{{lunaImage1}}" alt="Story Image 1">
-            <img src="{{lunaImage2}}" alt="Story Image 2">
-            <img src="{{lunaImage3}}" alt="Story Image 3">
-            <img src="/llllll.jpeg" alt="Story Image 4">
-        </div>
-    </div>
+<section id="story" class="section container-max">
+<div class="section-subtitle">The Story</div>
+<div class="section-title">A Ritual of Light and Coffee</div>
+<div class="story-grid">
+<div class="story-text">
+<p>{{LUNATEXT}}</p>
+</div>
+<div class="story-images">
+<img src="{{lunaImage1}}">
+<img src="{{lunaImage2}}">
+<img src="{{lunaImage3}}">
+<img src="/llllll.jpeg">
+</div>
+</div>
 </section>
 
-<section id="contact" class="contact-section">
-    <div class="contact-container">
-        <div class="contact-heading">
-            <span class="contact-subtitle">Get in Touch</span>
-            <h2>Contact LUNA Coffee House</h2>
-        </div>
-        <div class="contact-details">
-            <div class="contact-item">
-                <span class="label">Email</span>
-                <a href="mailto:{{EMAIL}}">{{EMAIL}}</a>
-            </div>
-            <div class="contact-item">
-                <span class="label">Phone</span>
-                <a href="tel:{{PHONE}}">{{PHONE}}</a>
-            </div>
-            <div class="contact-item">
-                <span class="label">Instagram</span>
-                <a href="{{INSTAGRAM_LINK}}" target="_blank">{{INSTAGRAM}}</a>
-            </div>
-        </div>
-    </div>
-</section>
-
-<footer>
-    © 2026 LUNA Coffee House
-</footer>
-
+<section id="visit" class="section container-max">
+<div class="section-subtitle">Plan Your Visit</div>
+<div class="section-title">Location & Opening Hours</div>
+<div class="visit-grid">
+<div class="visit-card">
+    <span>Address</span>
+    <p id="address">{{address}}</p>
+    <a id="map-btn" class="map-btn" href="{{maplink}}" target="_blank">Open in Google Maps</a>
+</div>
+<div class="visit-card">
+    <span>Opening Hours</span>
+    <p id="hours">{{hours}}</p>
 </div>
 
-<script>
-const darkToggle = document.getElementById("darkToggle");
-if (darkToggle) {
-    darkToggle.addEventListener("click", () => {
-        document.body.classList.toggle("dark");
-    });
-}
-</script>
+</div>
+</section>
 
+<section id="contact" class="section container-max">
+<div class="section-subtitle">Get in Touch</div>
+<div class="section-title">Contact LUNA</div>
+<div class="contact-grid">
+<div class="contact-card">
+<span>Email</span>
+<a href="mailto:{{EMAIL}}">{{EMAIL}}</a>
+</div>
+<div class="contact-card">
+<span>Phone</span>
+<a href="tel:{{PHONE}}">{{PHONE}}</a>
+</div>
+<div class="contact-card">
+<span>Instagram</span>
+<a href="{{INSTAGRAM_LINK}}" target="_blank">{{INSTAGRAM}}</a>
+</div>
+</div>
+</section>
+
+<footer>© 2026 LUNA Coffee House</footer>
+
+<script>
+const header = document.querySelector("header");
+window.addEventListener("scroll", () => {
+    if(!header) return;
+    header.classList.toggle("shrink", window.scrollY > 80);
+});
+fetch('/luna')
+.then(res => res.json())
+.then(data => {
+    document.getElementById('address').innerHTML = data.address;
+    document.getElementById('hours').innerHTML = data.hours.replace(/\n/g, "<br>");
+    document.getElementById('hero-video').src = data.video;
+    document.getElementById('map-btn').href = data.mapLink;
+});
+</script>
 </body>
 </html>
